# camcal

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  mkdocs.yml  out.txt  pyproject.toml  vcpkg.json
.github/workflows/: docs.yml  test.yml  wheels.yml
cpp_src/: calibrate.cpp  calibrate.hpp  calibrate_opencv.cpp  cameramodels.hpp  ceres_geometry.hpp  main.cpp  matching_spline_model.cpp  normalize_pinhole_splined.cpp  pinhole_splined_fine_tune.cpp  pybind_utils.hpp  python_camera_functions.hpp  python_project.hpp  type_defs.hpp  utils.hpp
data/camera_models/: opencv.json  spline.json
data/test_datasets/: opencv.json  spline.json  wide_angle_charuco.npz
docs/: calibration-guide.md  calibration_guide.md  index.md
docs/media/calibration_docs/: make_projection_diagram.py
examples/: model_comparison.ipynb  model_differencing.ipynb  quickstart.py
experimental/notebooks/: bruh.py  initial_test.py
src/camcal/: camcal_bindings.pyi
src/camcal/_internal/: charuco.py  image.py
src/camcal/calibration/: calibrate.py
src/camcal/camera_models/: __init__.py  base_model.py  basic.py  opencv.py  pinhole_remapped.py  pinhole_splined.py
src/camcal/geometry/: pose.py
src/lensboy/: __init__.py  _demo_calibration.json  _logging.py  camcal_bindings.pyi  colors.py  demo.py  lensboy_bindings.pyi
src/lensboy/_internal/: charuco.py  image.py  paths.py  privacy.py  progress.py
src/lensboy/analysis/: __init__.py  differencing.py  image.py  plots.py  utils.py
src/lensboy/calibration/: calibrate.py  type_defs.py
src/lensboy/camera_models/: __init__.py  base_model.py  opencv.py  pinhole_remapped.py  pinhole_splined.py
src/lensboy/common_targets/: charuco.py
src/lensboy/geometry/: pose.py
tests/: conftest.py  test_integration.py  test_normalize.py  test_pinhole_model.py  test_serialization.py  test_target_warp.py
tools/: build.py  build.sh  build_config.py  generate_solved_dataset.py  generate_test_dataset.py  install_editable.sh  make_stubs.sh  release.sh  tidy.sh
