[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy>=1.23"]
build-backend = "scikit_build_core.build"


[project]
name = "lensboy"
version = "1.1.3"
description = "lensboy for camera calibrations"
authors = [{ name = "Robert Leo", email = "robert.leo.jonsson@gmail.com" }]

readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = ["numpy>=1.26", "opencv-contrib-python>=4.8"]

[project.optional-dependencies]
analysis = ["matplotlib>=3.8", "scipy>=1.11"]

[project.scripts]


[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build"

[tool.cibuildwheel]
skip = ["*musllinux*", "*win*", "*i686"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = """
dnf install -y lapack-devel blas-devel curl zip unzip tar && \
git clone https://github.com/microsoft/vcpkg.git $HOME/vcpkg && \
$HOME/vcpkg/bootstrap-vcpkg.sh -disableMetrics && \
VCPKG_ROOT=$HOME/vcpkg $HOME/vcpkg/vcpkg install --no-print-usage
"""

[tool.cibuildwheel.linux.environment]
VCPKG_ROOT = "$HOME/vcpkg"

[tool.cibuildwheel.macos]
before-all = """
git clone https://github.com/microsoft/vcpkg.git $HOME/vcpkg && \
$HOME/vcpkg/bootstrap-vcpkg.sh -disableMetrics && \
VCPKG_ROOT=$HOME/vcpkg $HOME/vcpkg/vcpkg install --no-print-usage
"""

[tool.cibuildwheel.macos.environment]
VCPKG_ROOT = "$HOME/vcpkg"

[dependency-groups]
dev = [
    "matplotlib>=3.8",
    "scipy>=1.11",
    "tqdm>=4.67.1",
    "fire>=0.7.1",
    "imageio>=2.37.2",
    "ipykernel>=7.0.1",
    "jupytext>=1.18.1",
    "mediapy>=1.2.4",
    "pybind11>=3.0.1",
    "pybind11-stubgen>=2.5.5",
    "pyright>=1.1.407",
    "ruff>=0.14.1",
    "scikit-build-core>=0.11.6",
    "slamd>=2.1.12",
    "pytest>=9.0.2",
]


[tool.ruff]
exclude = ["**/*.pyi", "**/*.ipynb", "experimental/**", "docs/**"]
line-length = 90

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I", "UP", "NPY201", "D"]
ignore = ["F722", "D100", "D104", "D105", "D202"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/lensboy/_internal/**" = ["D"]
"src/lensboy/camera_models/base_model.py" = ["D"]
"tests/**" = ["D"]

[tool.pyright]
useLibraryCodeForTypes = true
include = ["src/lensboy/**"]
exclude = ["**/build", "**/dist", "**/.venv", "**/__pycache__", "**/*.ipynb"]
